--- a/Register_form.html
+++ b/Register_form.html
@@ -51,7 +51,7 @@
         <div class="box">
             <h2><span>Register</span></h2>
 
-            <p1>Create your account it's free and only takes a minutes.</p1>
+            <p1>Create your account it's free and only takes few minutes.</p1>
             <br><br><br>
 
             <input type="text" placeholder="First Name">
